# test-repo

./: CMakeLists.txt  Dockerfile.app  Dockerfile.web  docker-compose.yml  entrypoint.sh  main.cpp
.github/workflows/: ci.yml  docker-web-tests.yml
